[tool.poetry]
name = "course-project"
version = "0.1.0"
description = ""
authors = ["Мария <oms1999@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datetime = "^5.3"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
